# cpputil

./: .clangd  .gitignore  CMakeLists.txt  README.md  audio_frame.hh  calibrator.hh  countzip.hh  filter.hh  math.hh  math_tables.hh  oscs.hh  soft_neon.hh  zip.hh
cpputil/: audio_frame.hh  bitfield.hh  calibrator.hh  colors.hh  countzip.hh  iterator_helpers.hh  math_tables.cc  math_tables.hh  oscs.hh
tests/: CMakeLists.txt  Makefile  aligned_allocator_tests.cc  analyzed_signal_tests.cc  audio_frame_tests.cc  base_concepts_tests.cc  bitfield_tests.cc  byte_block_tests.cc  calibrator_tests.cc  callable_tests.cc  change_detector_tests.cc  circular_buffer_access_tests.cc  circular_buffer_block_tests.cc  circular_buffer_opt_tests.cc  circular_buffer_spsc_tests.cc  circular_stack_tests.cc  color_tests.cpp  compact_binary_parser_tests.cc  compact_binary_serializer_tests.cc  compact_binary_writer_tests.cc  contains_word_tests.cc  cortex_math_tests.cc  countzip_tests.cc  debouncer_compact_tests.cc  debouncer_tests.cc  doublebuf_stream_tests.cc  edge_detector_tests.cc  filter_tests.cc  filtered_interp_array_tests.cc  fixed_vector_tests.cc  flat_map_tests.cc  geometry_tests.cc  hsv_tests.cc  input_output_buffer_tests.cc  int_to_str_tests.cc  interp_array_tests.cc  interp_param_tests.cc  iterator_helpers_tests.cc  lockfree_fifo_spsc_dyn_tests.cc  lockfree_fifo_spsc_tests.cc  (+33 more)
util/: aligned_allocator.hh  analyzed_signal.hh  audio_frame.hh  base_concepts.hh  bitfield.hh  buffer.hh  byte_block.hh  calibrator.hh  callable.hh  circular_buffer.hh  circular_buffer_block.hh  circular_buffer_ext.hh  circular_buffer_opt.hh  circular_buffer_spsc.hh  circular_stack.hh  colors.hh  colors_rgb565.hh  compact_binary_parser.hh  compact_binary_serializer.hh  compact_binary_writer.hh  contains_word.hh  cortex_math.hh  debouncer.hh  debouncer_compact.hh  doublebuf_stream.hh  edge_detector.hh  filter.hh  filtered_interp_array.hh  fixed_vector.hh  flat_map.hh  geometry.hh  hsv.hh  input_output_buffer.hh  int_to_str.cc  int_to_str.hh  interp_array.hh  interp_param.hh  lockfree_fifo_spsc.hh  lockfree_fifo_spsc_dyn.hh  (+35 more)
(+1 files in other folders)
